    - Breaking changes
        - Finder#createTarget() methods are now all protected. The 
          findTarget() method is now public. Suggested by Leigh Klotz.
        - All core representation classes have been moved from the
          "org.restlet.resource" package into a new 
          "org.restlet.representation" package. Make sure to adjust your
          import instructions.
    - Bugs fixed
        - Fixed typo in the declaration of the 
          o.r.e.Engine#DESCRIPTOR_AUTHENTICATOR. Reported by Rémi 
          Dewitte.    
    - Enhancements
        - Added a getItemIterator() on RestletFileUpload to facilitate
          access to parts in streaming mode. Suggested by Paul Austin.
        - The default SAX handler has been implemented to log 
          validation information. Contributed by Raif S. Naffah.
        - DirectoryResource class in engine now has a protected
          getDirectoryContent() method. Suggested by Gordon Mohr.
        - Implemented Text#toString() in the Atom extension.
        - Completed list of registered media types. Suggested by Remi 
          Dewitte.
        - JAX-RS extension now leverages the new security API.
          Contributed by Bruno Dumon.
        - Added setters for helpers in Engine. 
          Suggested by Kevin Conaway.
        - Added the ability to tunnel methods via a specific header.
          Contributed by Fabrice Boileau.
        - Added conversion methods to engine's ByteUtils between byte
          arrays and character arrays. Contributed by Remi Dewitte.
        - Added protected DirectoryResource#getRepresentation() and 
          getClientDispatcher() method to facilitate extension and 
          support of special cases. 
          Original issue reported by Dave Fogel.
     - API changes
        - Added Role class and "roles" property to Application.
        - Fully refactored the security package introduce in 1.2 M1 
          based on community feed-back.