@@ -22,3 +22,5 @@ charset
 apache
 thierry
 boileau
+callback
+chunked
